--- a/frontend/index.ejs
+++ b/frontend/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome</title>
+    <script src="https://use.fontawesome.com/4440ba9576.js"></script>
   </head>
   <body>
     <div id="app"></div>
