--- a/frontend/index.ejs
+++ b/frontend/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <script src="https://use.fontawesome.com/4440ba9576.js"></script>
   </head>
