--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -189,6 +189,29 @@ th, td
     .sidebar
       top 0
 
+.photos-container
+  margin: 1rem;
+  margin-top: $navbarHeight + 1rem;
+
+  ul
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    padding: 0;
+
+  li
+    height: 40vh;
+    flex-grow: 1;
+    list-style-type: none;
+    border: 1px solid $borderColor;
+    &:hover
+      border-color: darken($borderColor, 30%);
+
+  img
+    max-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
 
 @media (min-width: ($MQMobile + 1px))
   .theme-container.no-sidebar
