--- a/docs/.vuepress/theme/styles/mobile.styl
+++ b/docs/.vuepress/theme/styles/mobile.styl
@@ -26,6 +26,13 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
     &.no-navbar
       .sidebar
         padding-top: 0
+  .photos-container
+    li
+      height: auto;
+      width: 100%;
+    img
+      width: 100%;
+      max-height: 55vh;
 
 // narrow mobile
 @media (max-width: $MQMobileNarrow)
@@ -35,3 +42,10 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
     div[class*="language-"]
       margin 0.85rem -1.5rem
       border-radius 0
+  .photos-container
+    li
+      height: auto;
+      width: 100%;
+    img
+      width: 100%;
+      max-height: 75vh;
